--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
-MONGO_URI=mongodb+srv://root:root@cluster0.wdltgwc.mongodb.net/apv
+MONGO_URI=mongodb+srv://root:VfkJLEZ6wsuGLUOf@cluster0.wdltgwc.mongodb.net/apv
 JWT_SECRET=$2b$10$T8U/6YKNf9vcq0f6SJzfYOIPCipKu2xYI.TM7nrXEqZB5d.8YEJua
+
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=40a61d3185837e
+EMAIL_PASS=0f6f82fc15c8f4
+
+FRONTEND_URL=http://localhost:5173
+
+# mongodb+srv://root:<db_password>@cluster0.wdltgwc.mongodb.net/
+# VfkJLEZ6wsuGLUOf
